Added basic functionality for calling mcr

--- a/config/binaries.cfg
+++ b/config/binaries.cfg
@@ -1,9 +1,9 @@
-[Linux]
+[linux]
 phraseSeg: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/phraseSeg
 extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/extractTonicTempoTuning
 alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
 
-[MacOSX]
+[macosx]
 phraseSeg: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/phraseSeg
 extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning
 alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore
