setup.py directly fetches the macosx binaries instead of the apps

--- a/config/binaries.cfg
+++ b/config/binaries.cfg
@@ -4,10 +4,6 @@ extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/ma
 alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
 
 [macosx]
-phraseSeg: https://github.com/sertansenturk/tomato_binaries/raw/master
-/macosx/phraseSeg.app
-extractTonicTempoTuning: https://github
-.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning
-.app
-alignAudioScore: https://github
-.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.app
+phraseSeg: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/phraseSeg.app/Contents/MacOS/phraseSeg
+extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning.app/Contents/MacOS/extractTonicTempoTuning
+alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.appContents/MacOS/alignAudioScore
