Updated the gitignore with the apps

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@
 !.travis.yml
 build/
 dist/
-*alignAudioScore
-*extractTonicTempoTuning
-*phraseSeg
+*alignAudioScore*
+*extractTonicTempoTuning*
+*phraseSeg*
