--- a/config/binaries.cfg
+++ b/config/binaries.cfg
@@ -4,6 +4,6 @@ extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/ma
 alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
 
 [macosx]
-phraseSeg: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/phraseSeg.app
-extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning.app
-alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.appContents
+phraseSeg.zip: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/phraseSeg.zip
+extractTonicTempoTuning.zip: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning.zip
+alignAudioScore.zip: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.zip
