--- a/config/mcr_path.cfg
+++ b/config/mcr_path.cfg
@@ -1,6 +1,6 @@
 # custom configuration: add your own path to here if you haven't installed in the default path of MCR; overwrites defaults
 [custom]
-op_sys:
+sys_os:
 env_var: 
 mcr_path: 
 set_paths: 
@@ -8,14 +8,14 @@ set_paths:
 # ------------------------- Don't change the lines below! -----------------------
 # default installation path of MCR in linux
 [linux_default]
-op_sys: linux
+sys_os: linux
 env_var: LD_LIBRARY_PATH
 mcr_path: /usr/local/MATLAB/MATLAB_Runtime/v85
 set_paths: %(mcr_path)s/runtime/glnxa64:%(mcr_path)s/sys/os/glnxa64:%(mcr_path)s/bin/glnxa64
 
 # default installation path of MCR in linux
 [macosx_default]
-op_sys: macosx
+sys_os: macosx
 env_var: DYLD_LIBRARY_PATH
 mcr_path: /Applications/MATLAB/MATLAB_Runtime/v85
 set_paths: %(mcr_path)s/runtime/maci64:%(mcr_path)s/sys/os/maci64:%(mcr_path)s/bin/maci64
