--- a/config/binaries.cfg
+++ b/config/binaries.cfg
@@ -4,6 +4,6 @@ extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/ma
 alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
 
 [macosx]
-phraseSeg.zip: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/phraseSeg.zip
+phraseSeg.zip: https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_mac.zip
 extractTonicTempoTuning.zip: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning.zip
 alignAudioScore.zip: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.zip
