--- a/config/binaries.cfg
+++ b/config/binaries.cfg
@@ -1,5 +1,5 @@
 [linux]
-phraseSeg: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/phraseSeg
+phraseSeg: https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg
 extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/extractTonicTempoTuning
 alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
 
