--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 recursive-include tomato/ *.json
 recursive-include tomato/_binaries *
-recursive-include config/ *
+recursive-include tomato/config/ *.cfg
