--- a/tomato/config/bin.cfg
+++ b/tomato/config/bin.cfg
@@ -1,5 +1,5 @@
 [linux]
-phraseSeg: https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg
+phraseSeg.zip: https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_linux.zip
 extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/extractTonicTempoTuning
 alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
 
