Changed the : separator to = in the config files

--- a/tomato/config/bin.cfg
+++ b/tomato/config/bin.cfg
@@ -1,9 +1,9 @@
 [linux]
-phraseSeg.zip: https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_linux.zip
-extractTonicTempoTuning: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/extractTonicTempoTuning
-alignAudioScore: https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
+phraseSeg.zip = https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_linux.zip
+extractTonicTempoTuning = https://github.com/sertansenturk/tomato_binaries/raw/master/linux/extractTonicTempoTuning
+alignAudioScore = https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
 
 [macosx]
-phraseSeg.zip: https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_mac.zip
-extractTonicTempoTuning.zip: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning.zip
-alignAudioScore.zip: https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.zip
+phraseSeg.zip = https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_mac.zip
+extractTonicTempoTuning.zip = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning.zip
+alignAudioScore.zip = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.zip
