[BROKEN] Started lilypond to svg conversion

--- a/tomato/config/mcr_path.cfg
+++ b/tomato/config/mcr_path.cfg
@@ -5,7 +5,7 @@ env_var =
 mcr_path =
 set_paths =
 
-# ------------------------- Don't change the lines below! -----------------------
+# ----------------------- Don't change the lines below! -----------------------
 # default installation path of MCR in linux
 [linux_default]
 sys_os = linux
