Added lilypond to svg conversion

--- a/tomato/config/lilypond.cfg
+++ b/tomato/config/lilypond.cfg
@@ -4,5 +4,5 @@ custom =
 
 # ---------------------- Don't change the lines below! ------------------------
 [default]
-linux =
+linux = $HOME/bin/lilypond
 macosx = /Applications/LilyPond.app/Contents/Resources/bin/lilypond
