Added lilypond config reading, tested for Linux

--- a/tomato/config/lilypond.cfg
+++ b/tomato/config/lilypond.cfg
@@ -3,6 +3,6 @@
 custom =
 
 # ---------------------- Don't change the lines below! ------------------------
-[default]
+[DEFAULT]
 linux = $HOME/bin/lilypond
 macosx = /Applications/LilyPond.app/Contents/Resources/bin/lilypond
