Set system-wide installed LilyPond to default Linux configuration

--- a/tomato/config/lilypond.cfg
+++ b/tomato/config/lilypond.cfg
@@ -1,8 +1,10 @@
 # custom configuration. add your own path to here if you haven't installed Lilypond to the default installation location
 [custom]
 custom =
+# custom location for Linux installed from LilyPond website
+# custom = $HOME/bin/lilypond
 
 # ---------------------- Don't change the lines below! ------------------------
 [DEFAULT]
-linux = $HOME/bin/lilypond
+linux = lilypond
 macosx = /Applications/LilyPond.app/Contents/Resources/bin/lilypond
