Added model files to manifest file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 recursive-include tomato *.json
 recursive-include tomato/bin *
 recursive-include tomato/config *.cfg
+recursive-include tomato/models *
