--- a/tomato/config/bin.cfg
+++ b/tomato/config/bin.cfg
@@ -2,8 +2,10 @@
 phraseSeg.zip = https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_linux.zip
 extractTonicTempoTuning = https://github.com/sertansenturk/tomato_binaries/raw/master/linux/extractTonicTempoTuning
 alignAudioScore = https://github.com/sertansenturk/tomato_binaries/raw/master/linux/alignAudioScore
+MusikiToMusicXml = https://github.com/sertansenturk/tomato_binaries/raw/master/linux/MusikiToMusicXml
 
 [macosx]
 phraseSeg.zip = https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_mac.zip
 extractTonicTempoTuning.zip = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning.zip
 alignAudioScore.zip = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.zip
+MusikiToMusicXml = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/MusikiToMusicXml.zip
