Updated MusikiToMusicXml url

--- a/tomato/config/bin.cfg
+++ b/tomato/config/bin.cfg
@@ -8,4 +8,4 @@ MusikiToMusicXml = https://github.com/sertansenturk/tomato_binaries/raw/master/l
 phraseSeg.zip = https://github.com/MTG/makam-symbolic-phrase-segmentation/releases/download/v1.0-alpha.1/phraseSeg_mac.zip
 extractTonicTempoTuning.zip = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/extractTonicTempoTuning.zip
 alignAudioScore.zip = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/alignAudioScore.zip
-MusikiToMusicXml = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/MusikiToMusicXml.zip
+MusikiToMusicXml = https://github.com/sertansenturk/tomato_binaries/raw/master/macosx/MusikiToMusicXml
