--- a/tomato/config/mcr_path.cfg
+++ b/tomato/config/mcr_path.cfg
@@ -6,14 +6,14 @@ mcr_path =
 set_paths =
 
 # ----------------------- Don't change the lines below! -----------------------
-# default installation path of MCR in linux
+# default installation path of MCR in Linux machines
 [linux_default]
 sys_os = linux
 env_var = LD_LIBRARY_PATH
 mcr_path = /usr/local/MATLAB/MATLAB_Runtime/v85
 set_paths = %(mcr_path)s/runtime/glnxa64:%(mcr_path)s/sys/os/glnxa64:%(mcr_path)s/bin/glnxa64
 
-# default installation path of MCR in linux
+# default installation path of MCR in Mac OSX machines
 [macosx_default]
 sys_os = macosx
 env_var = DYLD_LIBRARY_PATH
