--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ recursive-include tomato *.json
 recursive-include tomato/bin *
 recursive-include tomato/config *.cfg
 recursive-include tomato/models *
+recursive-include tomato/musicalattributes *
