--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-git+https://github.com/MTG/SymbTr-extras.git@v0.4.0#egg=symbtrextras
 git+https://github.com/burakuyar/MusicXMLConverter.git@v1.2.1#egg=musicxmlconverter
 git+https://github.com/hsercanatli/makam-musicxml2lilypond.git@v0.9.6#egg=musicxml2lilypond
 
 numpy>=1.9.0  # numerical operations
 scipy>=0.17.0  # temporary mat file saving for MCR binary inputs
+pandas>=0.18.0  # tabular data processing
 matplotlib>=1.5.1  # plotting
 json_tricks==2.1  # saving json files with classes and numpy arrays
 eyeD3>=0.7.5  # reading metadata embedded in the audio recordings
