--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ matplotlib>=1.5.1  # plotting
 json_tricks==2.1  # saving json files with classes and numpy arrays
 eyeD3>=0.7.5  # reading metadata embedded in the audio recordings
 six>=1.10.0  # Python 2*3 support
+future>=0.15.2  # Python 2*3 support
 python-Levenshtein==0.12.0  # semiotic structure labeling similarity
 networkx==1.11  # semiotic structure labeling clique computation
 lxml>=3.6.0  # musicxml conversion
