--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,12 @@
 [tox]
 # Choose your Python versions. They have to be available
 # on the system the tests are run on.
-envlist = py35, py36, py37, py38, flake8, pylint  #, docker
+envlist = py35, py36, py37, py38, flake8
+#, pylint, docker
 skip_missing_interpreters = true
 
 [testenv]
-commands = pytest tests --cov=demo --cov-report term --cov-append
+commands = pytest tests --cov=tomato --cov-report term --cov-append
 description = run unittests
 deps =
     -rrequirements.txt
@@ -21,7 +22,7 @@ deps =
     pytest-cov
 depends =
     {py35, py36, py37, py38}: clean
-    report: py34, py35, py36, py37, py38
+    report: py35, py36, py37, py38
 
 [testenv:report]
 commands =
@@ -37,20 +38,21 @@ skip_install = true
 
 [testenv:flake8]
 commands =
-    flake8 demo
+    flake8 tomato
     flake8 setup.py
 deps =
     flake8
+skip_install = true
 
-[testenv:pylint]
-commands = pylint demo
-deps =
-    -rrequirements.txt
-    pylint
+# [testenv:pylint]
+# commands = pylint tomato
+# deps =
+#     -rrequirements.txt
+#     pylint
 
 # [testenv:docker]
 # commands =
-#     docker build -t tdd-demo .
-#     docker run -it tdd-demo -c \
+#     docker build -t tomato .
+#     docker run -it tomato -c \
 #         "from demo.converter import hz_to_cent; print(hz_to_cent([500], 250))"
 # whitelist_externals = docker
