Tox shows Python version explicitly

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,9 @@ envlist = py35, py36, py37, py38, flake8
 skip_missing_interpreters = true
 
 [testenv]
-commands = pytest tests --cov=tomato --cov-report term --cov-append
+commands = 
+    python --version
+    pytest tests --cov=tomato --cov-report term --cov-append
 description = run unittests
 deps =
     -rrequirements.txt
