Updated setup and requirements files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-numpy>=1.9.0  # numerical operations
-scipy>=0.17.0  # temporary mat file saving for MCR binary inputs
-pandas>=0.18.0  # tabular data processing
-matplotlib>=1.5.1  # plotting
+numpy==1.17.4  # numerical operations
+scipy==1.4.0  # temporary mat file saving for MCR binary inputs
+pandas==0.24.2  # tabular data processing
+matplotlib==3.0.3  # plotting
 json_tricks==3.12.1  # saving json files with classes and numpy arrays
-eyeD3>=0.7.5  # reading metadata embedded in the audio recordings
-six>=1.10.0  # Python 2*3 support
-future>=0.15.2  # Python 2*3 support
+eyeD3==0.8.11  # reading metadata embedded in the audio recordings
+six==1.11.0  # Python 2*3 support
+future==0.18.2  # Python 2*3 support
 python-Levenshtein==0.12.0  # semiotic structure labeling similarity
 networkx==1.11  # semiotic structure labeling clique computation
-lxml>=3.6.0  # musicxml conversion
+lxml==4.4.2  # musicxml conversion
 musicbrainzngs==0.6  # metadata crawling from musicbrainz
+essentia==2.1b5  # music signal processing
