--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ python-Levenshtein==0.12.0  # semiotic structure labeling similarity
 networkx==1.11  # semiotic structure labeling clique computation
 lxml==4.4.2  # musicxml conversion
 musicbrainzngs==0.6  # metadata crawling from musicbrainz
-essentia==2.1b5  # music signal processing
+essentia==2.1b5;platform_system=='Linux'  # music signal processing
