--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 [tox]
 # Choose your Python versions. They have to be available
 # on the system the tests are run on.
-envlist = py35, py36, py37, py38, flake8
+envlist = py35, py36, py37, flake8
 #, pylint, docker
 skip_missing_interpreters = true
 
@@ -23,8 +23,8 @@ deps =
     pytest
     pytest-cov
 depends =
-    {py35, py36, py37, py38}: clean
-    report: py35, py36, py37, py38
+    {py35, py36, py37}: clean
+    report: py35, py36, py37
 
 [testenv:report]
 commands =
