Added docker build to travis

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@
 [tox]
 # Choose your Python versions. They have to be available
 # on the system the tests are run on.
-envlist = py35, py36, py37, flake8
-#, pylint, docker
+envlist = py35, py36, py37, flake8, docker
+#, pylint
 skip_missing_interpreters = true
 
 [testenv]
@@ -52,9 +52,9 @@ skip_install = true
 #     -rrequirements.txt
 #     pylint
 
-# [testenv:docker]
-# commands =
-#     docker build -t tomato .
-#     docker run -it tomato -c \
-#         "from demo.converter import hz_to_cent; print(hz_to_cent([500], 250))"
-# whitelist_externals = docker
+[testenv:docker]
+commands =
+    docker build -t tomato .
+    docker run -it tomato -c \
+        "from tomato import __version__; print(__version__)"
+whitelist_externals = docker
