--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: python
 matrix:
   include:
-    # - name: "Docker build"
-    #   services: docker
-    #   python: 3.7
-    #   env: TOX_ENV=docker
-    #   before_install:
-    #     - docker --version
-    #     - pip install -U pip
-    #     - pip install tox-travis
-    #   install: # installed by tox
-    #   script: tox -e $TOX_ENV
-    #   after_success: # do nothing
+    - name: "Docker build"
+      services: docker
+      python: 3.6
+      env: TOX_ENV=docker
+      before_install:
+        - docker --version
+        - pip install -U pip
+        - pip install tox-travis
+      install: # installed by tox
+      script: tox -e $TOX_ENV
+      after_success: # do nothing
     - name: "Python 3.5"
       python: 3.5
       env: TOX_PYTHON_ENV=py35
