--- a/tox.ini
+++ b/tox.ini
@@ -55,6 +55,6 @@ skip_install = true
 [testenv:docker]
 commands =
     docker build -t tomato .
-    docker run -it tomato -c \
+    docker run -it tomato python3 -c \
         "from tomato import __version__; print(__version__)"
 whitelist_externals = docker
