--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ skip_install = true
 
 [testenv:docker]
 commands =
-    docker build -t tomato .
-    docker run -it tomato python3 -c \
+    docker build -t sertansenturk/tomato .
+    docker run -it sertansenturk/tomato python3 -c \
         "from tomato import __version__; print(__version__)"
 whitelist_externals = docker
