--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 [tox]
 # Choose your Python versions. They have to be available
 # on the system the tests are run on.
-envlist = py35, py36, py37, flake8, docker
+envlist = py35, py36, py37, flake8, pylint, docker
 #, pylint
 skip_missing_interpreters = true
 
@@ -46,11 +46,11 @@ deps =
     flake8
 skip_install = true
 
-# [testenv:pylint]
-# commands = pylint tomato
-# deps =
-#     -rrequirements.txt
-#     pylint
+[testenv:pylint]
+commands = pylint setup.py
+deps =
+    -rrequirements.txt
+    pylint
 
 [testenv:docker]
 commands =
