Added pylint-fail-under to tox

--- a/tox.ini
+++ b/tox.ini
@@ -46,10 +46,13 @@ deps =
 skip_install = true
 
 [testenv:pylint]
-commands = pylint setup.py
+commands =
+    pylint setup.py
+    pylint-fail-under --fail_under 9.5 tomato
 deps =
     -rrequirements.txt
     pylint
+    pylint-fail-under
 
 [testenv:docker]
 commands =
