Tox call pylint once

--- a/tox.ini
+++ b/tox.ini
@@ -47,8 +47,7 @@ skip_install = true
 
 [testenv:pylint]
 commands =
-    pylint setup.py
-    pylint-fail-under --fail_under 9.75 tomato
+    pylint-fail-under --fail_under 9.75 tomato setup.py
 deps =
     -rrequirements.txt
     pylint
