--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,10 @@ skip_missing_interpreters = true
 [testenv]
 commands = 
     python --version
+    python -c "import tomato.joint.completeanalyzer;import tomato.symbolic.symbtrconverter"
     pytest tests --cov=tomato --cov-report term --cov-append
 description = run unittests
 deps =
-    -rrequirements.txt
     pytest
     pytest-cov
 depends =
@@ -57,5 +57,5 @@ deps =
 commands =
     docker build -t sertansenturk/tomato .
     docker run -it sertansenturk/tomato python3 -c \
-        "from tomato import __version__; print(__version__)"
+        "import tomato.joint.completeanalyzer;import tomato.symbolic.symbtrconverter"
 whitelist_externals = docker
