Removed completeanalyzer import from python tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ skip_missing_interpreters = true
 [testenv]
 commands = 
     python --version
-    python -c "import tomato.joint.completeanalyzer;import tomato.symbolic.symbtrconverter"
+    python -c "import tomato.symbolic.symbtrconverter"
     pytest tests --cov=tomato --cov-report term --cov-append
 description = run unittests
 deps =
