--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ skip_missing_interpreters = true
 [testenv]
 commands = 
     python --version
-    python -c "import tomato.symbolic.symbtrconverter"
+    python -c "import tomato.__version__; import numpy as np; print(tomato.__version__)"
     pytest tests --cov=tomato --cov-report term --cov-append
 description = run unittests
 deps =
@@ -57,5 +57,5 @@ deps =
 commands =
     docker build -t sertansenturk/tomato .
     docker run -it sertansenturk/tomato python3 -c \
-        "import tomato.joint.completeanalyzer;import tomato.symbolic.symbtrconverter"
+        "import tomato.symbolic.symbtrconverter; import tomato.joint.completeanalyzer"
 whitelist_externals = docker
