--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ skip_missing_interpreters = true
 [testenv]
 commands = 
     python --version
-    python -c "from tomato import __version__; import numpy as np; print(tomato.__version__)"
+    python -c "import numpy as np; from tomato import __version__; print(__version__)"
     pytest tests --cov=tomato --cov-report term --cov-append
 description = run unittests
 deps =
