--- a/.travis.yml
+++ b/.travis.yml
@@ -7,27 +7,25 @@ matrix:
       env: TOX_ENV=docker
       before_install:
         - docker --version
+      install: 
         - pip install -U pip
         - pip install tox-travis
-      install: # installed by tox
       script: tox -e $TOX_ENV
       after_success: # do nothing
     - name: "pylint"
       python: 3.6
       env: TOX_ENV=pylint
-      before_install:
+      install:
         - pip install -U pip
         - pip install tox-travis
-      install: # installed by tox
       script: tox -e $TOX_ENV
       after_success: # do nothing
     - name: "flake8"
       python: 3.6
       env: TOX_ENV=flake8
-      before_install:
+      install:
         - pip install -U pip
         - pip install tox-travis
-      install: # installed by tox
       script: tox -e $TOX_ENV
       after_success: # do nothing
     - name: "Python 3.5"
