--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ matrix:
       env: TOX_PYTHON_ENV=py37
 before_install:
   - ls -la
+install:
   - pip install -U pip
   - pip install tox-travis
   - pip install codecov
