--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
     - name: "pylint"
       python: 3.6
       env: TOX_ENV=pylint
+      before_install:
+        - 
       install:
         - pip install -U pip
         - pip install tox-travis
