--- a/.travis.yml
+++ b/.travis.yml
@@ -16,20 +16,24 @@ matrix:
       python: 3.6
       env: TOX_ENV=pylint
       before_install:
-        - 
+        -
       install:
         - pip install -U pip
         - pip install tox-travis
       script: tox -e $TOX_ENV
-      after_success: # do nothing
+      after_success:
+        -
     - name: "flake8"
       python: 3.6
       env: TOX_ENV=flake8
+      before_install:
+        -
       install:
         - pip install -U pip
         - pip install tox-travis
       script: tox -e $TOX_ENV
-      after_success: # do nothing
+      after_success:
+        -
     - name: "Python 3.5"
       python: 3.5
       env: TOX_PYTHON_ENV=py35
