--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ matrix:
         - pip install -U pip
         - pip install tox-travis
       script: tox -e $TOX_ENV
-      after_success: # do nothing
+      after_success:
+        -
     - name: "pylint"
       python: 3.6
       env: TOX_ENV=pylint
