added python version call to tox flake8 and pylint

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ skip_install = true
 
 [testenv:flake8]
 commands =
+    python --version
     flake8 tomato
     flake8 setup.py
 deps =
@@ -47,6 +48,7 @@ skip_install = true
 
 [testenv:pylint]
 commands =
+    python --version
     pylint-fail-under --fail_under 9.80 tomato setup.py
 deps =
     -rrequirements.txt
