added flake8 and pylint to main python calls

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,6 @@ install:
   - pip install tox-travis
   - pip install codecov
 script:
-  - tox -e $TOX_PYTHON_ENV
+  - tox -e $TOX_PYTHON_ENV, flake8, pylint
 after_success:
   - codecov # submit coverage to https://codecov.io/gh/sertansenturk/tomato/
