--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,19 @@
 language: python
-matrix:
+jobs:
   include:
+    - name: "integration"
+      if: branch IN (master)
+      services: docker
+      python: 3.6
+      env: TOX_ENV=docker
+      before_install:
+        - docker --version
+      install: 
+        - pip install -U pip
+        - pip install tox-travis
+      script: tox -e $TOX_ENV
+      after_success:
+        -
     - name: "docker build"
       services: docker
       python: 3.6
