--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,8 @@
 language: python
 jobs:
   include:
-    - name: "integration"
+    - name: "docker build" # smoke test end-to-end installation
       if: branch IN (master, dev)
-      services: docker
-      python: 3.6
-      env: TOX_ENV=docker
-      before_install:
-        - docker --version
-      install: 
-        - pip install -U pip
-        - pip install tox-travis
-      script: tox -e $TOX_ENV
-      after_success:
-        -
-    - name: "docker build"
       services: docker
       python: 3.6
       env: TOX_ENV=docker
