--- a/.travis.yml
+++ b/.travis.yml
@@ -14,28 +14,6 @@ jobs:
       script: tox -e $TOX_ENV
       after_success:
         -
-    - name: "pylint"
-      python: 3.6
-      env: TOX_ENV=pylint
-      before_install:
-        -
-      install:
-        - pip install -U pip
-        - pip install tox-travis
-      script: tox -e $TOX_ENV
-      after_success:
-        -
-    - name: "flake8"
-      python: 3.6
-      env: TOX_ENV=flake8
-      before_install:
-        -
-      install:
-        - pip install -U pip
-        - pip install tox-travis
-      script: tox -e $TOX_ENV
-      after_success:
-        -
     - name: "Python 3.5"
       python: 3.5
       env: TOX_PYTHON_ENV=py35
@@ -52,6 +30,6 @@ install:
   - pip install tox-travis
   - pip install codecov
 script:
-  - tox -e $TOX_PYTHON_ENV
+  - tox -e $TOX_PYTHON_ENV -e flake8 -e pylint
 after_success:
   - codecov # submit coverage to https://codecov.io/gh/sertansenturk/tomato/
