Added completeanalyzer and symbtrconverter smoke tests

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ skip_missing_interpreters = true
 commands = 
     python --version
     python -c "import numpy as np; from tomato import __version__; print(__version__)"
-    pytest tests --cov=tomato --cov-report term --cov-append
+    pytest tests -m "not smoke" --cov=tomato --cov-report term --cov-append
 description = run unittests
 deps =
     pytest
@@ -67,3 +67,4 @@ commands =
     docker run -it sertansenturk/tomato python3 -c \
         "import tomato.symbolic.symbtrconverter; import tomato.joint.completeanalyzer"
 whitelist_externals = docker
+skip_install = true
