Added extra_pip_packages argument to Dockerfile

--- a/tox.ini
+++ b/tox.ini
@@ -63,8 +63,9 @@ commands =
 
 [testenv:docker]
 commands =
-    docker build -t sertansenturk/tomato .
-    docker run -it sertansenturk/tomato python3 -c \
-        "import tomato.symbolic.symbtrconverter; import tomato.joint.completeanalyzer"
+    docker build -t sertansenturk/tomato --build-arg extra_pip_packages="pytest" .
+    docker run -it sertansenturk/tomato \
+        python3 -c \
+            "import tomato.symbolic.symbtrconverter; import tomato.joint.completeanalyzer"
 whitelist_externals = docker
 skip_install = true
