tox docker enviroment call docker-compose for smoke tests

--- a/tox.ini
+++ b/tox.ini
@@ -63,9 +63,6 @@ commands =
 
 [testenv:docker]
 commands =
-    docker build -t sertansenturk/tomato --build-arg extra_pip_packages="pytest" .
-    docker run -it sertansenturk/tomato \
-        python3 -c \
-            "import tomato.symbolic.symbtrconverter; import tomato.joint.completeanalyzer"
-whitelist_externals = docker
+    docker-compose -f docker-compose.travis.yml up
+whitelist_externals = docker-compose
 skip_install = true
