tox calls docker-compose run instead up

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,6 @@ commands =
 
 [testenv:docker]
 commands =
-    docker-compose -f docker-compose.travis.yml up
+    docker-compose -f docker-compose.travis.yml run tomato_tests
 whitelist_externals = docker-compose
 skip_install = true
