tox sends the pytest command to docker-compose

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,9 @@ commands =
 
 [testenv:docker]
 commands =
-    docker-compose -f docker-compose.travis.yml run tomato_tests
+    docker-compose \
+        -f docker-compose.travis.yml \
+        run tomato \
+        python3 -m pytest tests
 whitelist_externals = docker-compose
 skip_install = true
