--- a/docker-compose.travis.yml
+++ b/docker-compose.travis.yml
@@ -1,6 +1,6 @@
-version: "2"
+version: "3"
 services:
-  tomato_tests:
+  tomato:
     build:
       context: .
       args:
@@ -8,5 +8,3 @@ services:
     volumes:
       - ./demos/:/home/tomato_user/demos/
       - ./tests/:/home/tomato_user/tests/
-    command: 
-      python3 -m pytest tests
