Checking under which user travis runs docker

--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,6 @@ commands =
     docker-compose \
         -f docker-compose.travis.yml \
         run tomato \
-        python3 -m pytest tests
+        whoami
 whitelist_externals = docker-compose
 skip_install = true
