Checking the file permissions in demos folder in docker travis

--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,7 @@ commands =
     docker-compose \
         -f docker-compose.travis.yml \
         run tomato \
-        whoami
+        ls -la demos/
+;python3 -m pytest tests
 whitelist_externals = docker-compose
 skip_install = true
