Checking under which user travis runs docker

--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,7 @@ commands =
     docker-compose \
         -f docker-compose.travis.yml \
         run tomato \
-        ls -la demos/
+        whoami
 ;python3 -m pytest tests
 whitelist_externals = docker-compose
 skip_install = true
