Running docker-compose as user 1000 in tox

--- a/tox.ini
+++ b/tox.ini
@@ -65,8 +65,7 @@ commands =
 commands =
     docker-compose \
         -f docker-compose.travis.yml \
-        run tomato \
-        whoami
-;python3 -m pytest tests
+        run --user="1000:1000" tomato \
+        python3 -m pytest tests
 whitelist_externals = docker-compose
 skip_install = true
