--- a/tox.ini
+++ b/tox.ini
@@ -62,10 +62,15 @@ commands =
     {[testenv:pylint]commands}
 
 [testenv:docker]
+setenv =
+    UID = 1000
+    GID = 1001
 commands =
     docker-compose \
         -f docker-compose.travis.yml \
-        run --user="1000:1000" tomato \
+        run tomato \
         python3 -m pytest tests
+        ; whoami
+        ; ls -la demos
 whitelist_externals = docker-compose
 skip_install = true
