--- a/.dockerignore
+++ b/.dockerignore
@@ -3,11 +3,11 @@
 
 # Allow files and directories
 !demos
+!tests
 !tomato
 !setup.py
 !requirements.txt
 !MANIFEST.in
-!README.md
 
 # ignore unnecessary files inside the folders
 **/*~
