--- a/tox.ini
+++ b/tox.ini
@@ -62,15 +62,17 @@ commands =
     {[testenv:pylint]commands}
 
 [testenv:docker]
-setenv =
-    UID = 1000
-    GID = 1000
 commands =
-    docker-compose \
-        -f docker-compose.travis.yml \
-        run tomato \
-        python3 -m pytest tests
-        ; whoami
-        ; ls -la demos
-whitelist_externals = docker-compose
+    docker build . -t sertansenturk/tomato:latest
+    docker run sertansenturk/tomato python3 -c \
+        "import tomato.symbolic.symbtrconverter; import tomato.joint.completeanalyzer"
+whitelist_externals = docker
+skip_install = true
+
+[testenv:docker-travis]
+commands =
+    docker build . -t sertansenturk/tomato:latest
+    docker build . -f Dockerfile.travis -t sertansenturk/tomato-travis:latest
+    docker run sertansenturk/tomato-travis python3 -m pytest -vvv tests
+whitelist_externals = docker
 skip_install = true
