Renamed Dockerfile.travis to docker/tests/Dockerfile.smoke

--- a/tox.ini
+++ b/tox.ini
@@ -69,10 +69,10 @@ commands =
 whitelist_externals = docker
 skip_install = true
 
-[testenv:docker-travis]
+[testenv:docker-smoke]
 commands =
     docker build . -t sertansenturk/tomato:latest
-    docker build . -f Dockerfile.travis -t sertansenturk/tomato-travis:latest
-    docker run sertansenturk/tomato-travis python3 -m pytest -vvv tests
+    docker build . -f docker/tests/Dockerfile.smoke -t sertansenturk/tomato-smoke:latest
+    docker run sertansenturk/tomato-smoke python3 -m pytest tests
 whitelist_externals = docker
 skip_install = true
