--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jobs:
       if: branch IN (master, dev)
       services: docker
       python: 3.6
-      env: TOX_ENV=docker-travis
+      env: TOX_ENV=docker-smoke
       before_install:
         - docker --version
       install: 
