docker commands in tox are called via make

--- a/tox.ini
+++ b/tox.ini
@@ -63,16 +63,12 @@ commands =
 
 [testenv:docker]
 commands =
-    docker build . -t sertansenturk/tomato:latest
-    docker run sertansenturk/tomato python3 -c \
-        "import tomato.symbolic.symbtrconverter; import tomato.joint.completeanalyzer"
-whitelist_externals = docker
+    make docker
+whitelist_externals = make
 skip_install = true
 
-[testenv:docker-smoke]
+[testenv:docker-run-tests]
 commands =
-    docker build . -t sertansenturk/tomato:latest
-    docker build . -f docker/tests/Dockerfile.smoke -t sertansenturk/tomato-smoke:latest
-    docker run sertansenturk/tomato-smoke python3 -m pytest tests
-whitelist_externals = docker
+    make docker-run-tests
+whitelist_externals = make
 skip_install = true
