--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 language: python
 jobs:
   include:
-    - name: "docker smoke tests" # smoke test end-to-end installation
+    - name: "docker smoke tests"
       if: branch IN (master, dev)
       services: docker
       python: 3.6
-      env: TOX_ENV=docker-smoke
       before_install:
         - docker --version
       install: 
         - pip install -U pip
         - pip install tox-travis
-      script: tox -e $TOX_ENV
+      script: tox -e docker-run-tests
       after_success:
         -
     - name: "Python 3.5"
