--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 [tox]
 # Choose your Python versions. They have to be available
 # on the system the tests are run on.
-envlist = py35, py36, py37, lint, docker
+envlist = py35, py36, py37, docker-run-tests, lint
 skip_missing_interpreters = true
 
 [testenv]
