[skip travis] renamed docker env to docker-build

--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ commands =
     {[testenv:flake8]commands}
     {[testenv:pylint]commands}
 
-[testenv:docker]
+[testenv:docker-build]
 commands =
     make docker
 whitelist_externals = make
