--- a/tox.ini
+++ b/tox.ini
@@ -63,12 +63,14 @@ commands =
 
 [testenv:docker-build]
 commands =
-    make docker
+    make docker-build
+deps =
 whitelist_externals = make
 skip_install = true
 
 [testenv:docker-run-tests]
 commands =
     make docker-run-tests
+deps =
 whitelist_externals = make
 skip_install = true
