Moved test related commands to tox

--- a/tox.ini
+++ b/tox.ini
@@ -61,16 +61,34 @@ commands =
     {[testenv:flake8]commands}
     {[testenv:pylint]commands}
 
-[testenv:docker-build]
+[testenv:docker-run-imports]
 commands =
-    make docker-build
+    docker build . \
+		-t sertansenturk/tomato:latest
+    docker run \
+		sertansenturk/tomato:latest \
+		python3 -c \
+			"import tomato.symbolic.symbtrconverter; \
+			 import tomato.symbolic.symbtranalyzer; \
+			 import tomato.audio.audioanalyzer; \
+			 import tomato.joint.jointanalyzer; \
+			 import tomato.joint.completeanalyzer"
 deps =
-whitelist_externals = make
+whitelist_externals = docker
 skip_install = true
 
 [testenv:docker-run-tests]
+setenv =
+    DOCKER_TAG = sertansenturk/tomato
+    DOCKER_VER = latest
+    DOCKER_FILE = Dockerfile
 commands =
-    make docker-run-tests
+    docker build . \
+		-f docker/tests/Dockerfile \
+		-t sertansenturk/tomato-test:latest
+    docker run \
+		sertansenturk/tomato-test:latest \
+		python3 -m pytest tests
 deps =
-whitelist_externals = make
+whitelist_externals = docker
 skip_install = true
