Added tox calls to makefile

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 [tox]
 # Choose your Python versions. They have to be available
 # on the system the tests are run on.
-envlist = py35, py36, py37, docker-run-tests, lint
+envlist = py35, py36, py3, lint, docker
 skip_missing_interpreters = true
 
 [testenv]
@@ -61,28 +61,14 @@ commands =
     {[testenv:flake8]commands}
     {[testenv:pylint]commands}
 
-[testenv:docker-run-imports]
-commands =
-    docker build . \
-		-t sertansenturk/tomato:latest
-    docker run \
-		sertansenturk/tomato:latest \
-		python3 -c \
-			"import tomato.symbolic.symbtrconverter; \
-			 import tomato.symbolic.symbtranalyzer; \
-			 import tomato.audio.audioanalyzer; \
-			 import tomato.joint.jointanalyzer; \
-			 import tomato.joint.completeanalyzer"
-deps =
-whitelist_externals = docker
-skip_install = true
-
-[testenv:docker-run-tests]
+[testenv:docker]
 setenv =
     DOCKER_TAG = sertansenturk/tomato
     DOCKER_VER = latest
     DOCKER_FILE = Dockerfile
 commands =
+    docker build . \
+		-t sertansenturk/tomato:latest
     docker build . \
 		-f docker/tests/Dockerfile \
 		-t sertansenturk/tomato-test:latest
