Moved sample-data from demos/ussak--... to sample-data

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,11 +3,12 @@
 
 # Allow files and directories
 !demos
-!tests
-!src
-!setup.py
-!requirements.txt
 !MANIFEST.in
+!tests
+!requirements.txt
+!sample-data
+!setup.py
+!src
 
 # ignore unnecessary files inside the folders
 **/*~
