--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 [tox]
 # Choose your Python versions. They have to be available
 # on the system the tests are run on.
-envlist = py35, py36, py37, lint, docker
+envlist = py35, py36, py37, make, lint, docker
 skip_missing_interpreters = true
 
 [testenv]
@@ -60,6 +60,13 @@ deps =
 commands =
     {[testenv:flake8]commands}
     {[testenv:pylint]commands}
+
+[testenv:make]
+commands =
+    make
+deps =
+whitelist_externals = make
+skip_install = true
 
 [testenv:docker]
 setenv =
