--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,16 @@ jobs:
       if: branch IN (master, dev)
       python: 3.6
       before_install:
-        - if [ -z "$(/usr/local/MATLAB/MATLAB_Runtime/v85)" ]; then echo "Installing MCR to /usr/local/MATLAB/MATLAB_Runtime/v85..."; fi
+        - make help
       addons:
         apt:
           update: true
       install: 
         - pip install -U pip
         - pip install tox-travis
-      script: tox -e make
+      script:
+        - tox -e make all
+        - source venv/bin/activate; pytest tests
       after_success:
         -
     - name: "Python 3.5"
