--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,8 @@ jobs:
           update: true
       install: 
         - pip install -U pip
-        - pip install tox-travis
       script:
-        - tox -e make all
+        - make all
         - source venv/bin/activate; pytest tests
       after_success:
         -
