Fix erroneous command in the travis make job

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
       install: 
         - pip install -U pip
       script:
-        - make all
+        - make install-all
         - source venv/bin/activate; pytest tests
       after_success:
         -
