Moved base Dockerfile to docker/base

--- a/tox.ini
+++ b/tox.ini
@@ -68,9 +68,10 @@ setenv =
     DOCKER_FILE = Dockerfile
 commands =
     docker build . \
-		-t sertansenturk/tomato:latest
+        -f ./docker/base/Dockerfile \
+        -t sertansenturk/tomato:latest
     docker build . \
-		-f docker/tests/Dockerfile \
+		-f docker/test/Dockerfile \
 		-t sertansenturk/tomato-test:latest
     docker run \
 		sertansenturk/tomato-test:latest \
