Minor fix in Dockerfile comments

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -24,7 +24,7 @@ RUN apt-get -qq update && \
     rm -rf mcr-install
 
 # Install Python dependencies from requirements.txt in advance
-# - Useful for development since changes in code will not trigger a layer re-build
+# Useful for development since changes in code will not trigger a layer re-build
 COPY requirements.txt /code/
 RUN python3 -m pip install --upgrade pip && \
     pip3 install -r /code/requirements.txt
