--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ skip_install = true
 
 [testenv:flake8]
 commands =
-    flake8 tomato
+    flake8 src/tomato
     flake8 setup.py
 deps =
     flake8
